[FIX] <pro>TextField: Fixed Select or Text component, when use multiple the values would be covered.

--- a/components-pro/text-field/style/mixin.less
+++ b/components-pro/text-field/style/mixin.less
@@ -297,6 +297,7 @@
       max-width: 100%;
       height: 100%;
       margin-left: 0.04rem;
+      padding: 0;
       background-color: transparent;
       border: none;
       outline: 0;
